exercise-1.9/ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
      containers:
        - name: ping-pong
          image: ping-pong
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/files
