exercise-1.9/ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
